--- a/Projeto/frontend/BluMob_APP.dproj
+++ b/Projeto/frontend/BluMob_APP.dproj
@@ -143,6 +143,7 @@
         <DCCReference Include="services\UService.Cartao.pas"/>
         <DCCReference Include="services\UService.Base.pas"/>
         <DCCReference Include="utils\UUtils.Constants.pas"/>
+        <DCCReference Include="utils\UUtils.EnviarEmail.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
